syntax = "proto3";
package nodes;

option go_package = "github.com/snple/kokomi/pb/nodes;nodes";

import "port_message.proto";
import "generic_message.proto";

message PortListRequest {
    pb.Page page = 1;
    string device_id = 2;
    string tags = 3;
    string type = 4;
}

message PortListResponse {
    pb.Page page = 1;
    uint32 count = 2;
    repeated pb.Port port = 3;
}

message PortLinkRequest {
    string id = 1;
    sint32 status = 2;
}

message PortPullRequest {
    int64 after = 1;
    uint32 limit = 2;
    string device_id = 3;
    string type = 4;
}

message PortPullResponse {
    int64 after = 1;
    uint32 limit = 2;
    repeated pb.Port port = 3;
}

service PortService {
    rpc Create(pb.Port) returns (pb.Port) {}
    rpc Update(pb.Port) returns (pb.Port) {}
    rpc View(pb.Id) returns (pb.Port) {}
    rpc Name(pb.Name) returns (pb.Port) {}
    rpc Delete(pb.Id) returns (pb.MyBool) {}
    rpc List(PortListRequest) returns (PortListResponse) {}
    rpc Link(PortLinkRequest) returns (pb.MyBool) {}
    rpc ViewWithDeleted(pb.Id) returns (pb.Port) {}
    rpc Pull(PortPullRequest) returns (PortPullResponse) {}
    rpc Sync(pb.Port) returns (pb.MyBool) {}
}
